--- a/css-sheets/contact.css
+++ b/css-sheets/contact.css
@@ -164,7 +164,7 @@ button {
 @media (max-width: 576px) {
 
     .nav-bar {
-        padding-top: 110px;
+        padding-top: 180px;
     }
 
     .nav-bar a {
