--- a/css-sheets/resume.css
+++ b/css-sheets/resume.css
@@ -280,7 +280,7 @@ section.A5 {
     }
 
     footer {
-        padding: 30px 40px;
+        padding: 15px 20px;
     }
 }
 
@@ -338,6 +338,6 @@ section.A5 {
     }
 
     footer {
-        padding: 10px 40px;
+        padding: 5px 20px;
     }
 }
